--- a/BlogApp/pom.xml
+++ b/BlogApp/pom.xml
@@ -34,6 +34,11 @@
       <version>6.0.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
+      <version>1.6.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>BlogApp</finalName>
